--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "electron": "^33.2.0",
     "electron-reload": "^2.0.0-alpha.1",
+    "papaparse": "^5.4.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   }
