--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "Time report application",
   "main": "src/index.js",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make"
+    "start": "electron ."
   },
   "keywords": [],
-  "author": "Oscar Beltranq",
+  "author": "Oscar Beltran",
   "license": "ISC",
   "dependencies": {
     "better-sqlite3": "^11.5.0",
@@ -19,14 +17,6 @@
     "sqlite": "^5.1.1"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^7.5.0",
-    "@electron-forge/maker-deb": "^7.5.0",
-    "@electron-forge/maker-rpm": "^7.5.0",
-    "@electron-forge/maker-squirrel": "^7.5.0",
-    "@electron-forge/maker-zip": "^7.5.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.5.0",
-    "@electron-forge/plugin-fuses": "^7.5.0",
-    "@electron/fuses": "^1.8.0",
     "electron": "^33.2.0"
   }
 }
